css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---


// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "fonts",
        "bootstrap",
        "syntax-highlighting"
;

$green: rgb(60, 201, 60);

body {
    font-family: 'Josefin Sans', sans-serif;
    font-size: 1.8rem;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.navbar{
    border-radius: 0;
}

.navbar-brand {
    font-size: 1.8rem;
}

main {
    display: block;
    flex: 1 0 auto;
}

pre, code, code[class*="language-"],pre[class*="language-"] {
    // font-family: 'Fira Code', monospace;
    border: none;
    border-radius: 0px;
    font-size: 1.4rem;
    line-height: 2;
    margin-bottom: 25px;
}

p code {
    font-size: 1.4rem;
    padding: 1px 4px;
    font-family: 'Fira Code', monospace;
    color: #03a6f7;
    background-color: #f2f4f9;
    border-radius: 4px;
}

.navbar {
    margin-bottom: 0;
}

.container-fluid .jumbotron {
    height: 450px;
    // background: url('http://res.cloudinary.com/neoelemento/image/upload/v1464982113/blog/passion-min.jpg') center 30%;
    background: url('https://res.cloudinary.com/vishnupadmanabhan/image/upload/v1523635239/coffee_cheesecake_crop.jpg') center 30%;
    background-size: cover;
    border-bottom: 10px solid $green;
    color: white;
    margin-bottom: 75px;
    border-radius: 0;
}

.container-fluid .jumbotron-single {
    min-height: 225px;
    border-bottom: 10px solid $green;
    background-color: #1b1b25;
    color: white;
    margin-bottom: 10px;
    padding: 50px 0;
    border-radius: 0;
}

.title-about {
    font-weight: 700;
    text-transform: uppercase;
}

.single-article {
    margin-bottom: 25px;
    padding-bottom: 25px;
}

.post-title {
    font-weight: 700;
    text-transform: uppercase;
}

.post-title-single {
    font-weight: 700;
    text-transform: uppercase;
    font-size: 5rem;
}

.post-desc {
    font-size: 2.2rem;
    font-weight: 700;
}

.post-desc-single {
    font-size: 2.8rem;
    font-weight: 700;
}

.post-meta {
    font-weight: 700;
    text-align: center;
}

.post-category {
    font-weight: 700;
    text-transform: uppercase;
    border-bottom: 2px solid #5cb85c;
}

.post-featured-img {
    width: 100%;
}

.post-meta-date {
   margin-top: 20px;
   font-size: 1.4rem;
   font-style: italic;
   font-weight: 700; 
}

.post-meta img {
    width: 75%;
    height: 75%;
}

.post-featured-img {
    width: 100%;
}

.post-meta-date {
   margin-top: 20px;
   font-size: 1.4rem;
   font-style: italic;
   font-weight: 700; 
}

.post-body {
    padding: 15px 2px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    h1 {
        font-size: 4.2rem;
        font-weight: 700;
        text-transform: uppercase;
        margin-top: 3rem;
    }

    h2 {
        font-size: 3.6rem;
        font-weight: 700;
        text-transform: uppercase;
        margin-top: 3rem;
    }

    h3 {
      font-size: 3.2rem;
      font-weight: 700;
    }
    
    h4 {
      font-size: 2.8rem;
      font-weight: 700;
    }
    
    h5 {
      font-size: 2.6rem;
      font-weight: 700;
    }

    p {
        font-family: 'Josefin Sans', sans-serif;
        font-size: 1.8rem;
        line-height: 1.6;
        word-spacing: .4rem;
        font-weight: 400;
        color: #666666;
        -webkit-text-stroke: 0.45px rgba(0, 0, 0, 0.1);
        text-shadow: #fff 0px 1px 1px;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
    }

    img:not(.emoji) {
        max-width: 100%;
        margin: 30px auto;
        display: flex;
        align-self: center;
    }

    .post-body aside img:not(.emoji) {
        margin: 0 auto;
    }

    ul li, ol li {
        font-family: 'Josefin Sans', sans-serif;
        font-size: 1.8rem;
        line-height: 1.6;
        word-spacing: .4rem;
        font-weight: 400;
        color: #666666;
        -webkit-text-stroke: 0.45px rgba(0, 0, 0, 0.1);
        text-shadow: #fff 0px 1px 1px;
    }

    blockquote {
        font-family: 'Josefin Sans', sans-serif;
        font-style: italic;
        font-weight: 300;
        border-left: 3px solid $green;

        p {
            font-size: 1.8rem;
            color: #9a9a9a;
        }

        strong {
            font-weight: 500;
        }
    }

    table {
        font-family: 'Josefin Sans', sans-serif;
        font-size: 1.8rem;
        line-height: 1.6;
        word-spacing: .4rem;
        font-weight: 400;
        -webkit-text-stroke: 0.45px rgba(0, 0, 0, 0.1);
        text-shadow: #fff 0px 1px 1px;
        -webkit-font-smoothing: antialiased;
        -moz-osx-font-smoothing: grayscale;
        width: 100%;
        display: table;
        border-collapse: collapse;
        border: none;
        margin-bottom: 25px;

        thead {
            border-bottom: 1px solid #efefef;
            display: table-header-group;
            vertical-align: middle;
            border-color: inherit;
        }

        tbody {
            display: table-row-group;
            vertical-align: middle;
            border-color: inherit;

            tr {
                display: table-row;
                vertical-align: inherit;
                border-color: inherit;
            }

            th {
                font-weight: bold;
            }

            td, th {
                padding: 15px 5px;
                display: table-cell;
                text-align: left;
                vertical-align: middle;
                border-radius: 2px;
                border: none;
            }
        }

    }

    figure {
        margin: 20px auto;
        text-align: center;
    }

    figcaption {
        font-size: 1.2rem;
        margin-top: -20px;
        font-weight: 700;
        font-family: 'Fira Code', sans-serif;
    }
}

.PageNavigation {
  font-size: 14px;
  display: block;
  width: auto;
  overflow: hidden;
  border-bottom: 2px solid $green;
  margin-bottom: 30px;
  padding-bottom: 20px;
}

.PageNavigation a {
  display: block;
  width: 33.33333333%;
  float: left;
  margin: 1em 0;
}

.PageNavigation .back_home {
    text-align: center;
}

.PageNavigation .next {
  text-align: right;
}

// .post-body img:not(.emoji) {
//     width: 100%;
//     margin: 10px 0 20px 0;
// }

.footer-container{
    background-color: #1b1b25;
}

.footer-content {
    min-height: 20px;
    padding: 20px;
    color: white;
    font-size: 1.4rem;
}

footer .disclaimer {
    color: tomato;    
}

.copyright, .copyright-link {
    text-align: center;
    color: $green !important;
    font-size: 1.2rem;
}

footer .social-links ul {
    margin-top: 20px;
    display: flex;
    justify-content: center;
    li {
        display: flex;
        justify-content: space-around;

        a {
            color: lightslategray;
        }
    }
}

form.main_search {
    input {
        border: 0;
        border-bottom: 1px #ededed solid;
        border-radius: 0;
        background-color: #fff;
        box-shadow: none;
    }

    button.btn {
        border: 0;
        border: none;
        border-radius: 0;
        background-color: #fff !important;
        box-shadow: none;
        
        i {
            color: #aaa;
        }
    }
}

ul.social_links {
    display: flex;
    justify-content: space-around;

    a, a:hover, a:visited, a:focus, a:active {
        color: #363636;
    }
}

form.main_search {
    input.form-control:focus {
        box-shadow: none;
        outline: none;
    }
}

ul#search-results li, ul#search-results li p {
    font-family: 'Josefin Sans', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

li.search-list {
    list-style-type: none;
}

/* overrides */

.navbar-default {
    background-color: #fff;
    border-color: #e7e7e7;
}

.navbar-form {
    border: none;
}

.navbar-collapse.in {
    overflow-y: inherit;
}

.btn-green {
    color: #1b1b25;
    background-color: $green;
    border-color: #5cb85c;
}

.btn-green:hover {
    color: white;
    background-color: #5cb85c;
    border-color: #5cb85c;
}

.pagination>li>a, .pagination>li>span {
    color: $green;
}

ul {
    list-style-type: square;
}

ul ul, ol ul {
    list-style-type: disc;
}

ol ol ul, ol ul ul, ul ol ul, ul ul ul {
    list-style-type: circle;
}

.embed-responsive {
    margin: 30px 0;
}

#mc_embed_signup #mc-embedded-subscribe-form input.mce_inline_error {border:3px solid crimson;}

/* links */
a, a:hover, a:active, a:focus {
   outline: 0;
}

a, a:hover, a:visited, a:active, a:focus {
    color: $green;
    text-decoration: none;
}

h2 a, h2 a:hover, h2 a:visited, h2 a:active, h2 a:focus {
    color: black;
    text-decoration: none;
}

.more-link, .more-link:hover, .more-link:visited {
    text-transform: uppercase;
    color: salmon;
    font-weight: 700;
    text-decoration: none;
    margin-top: 15px;
    display: block;
}

